samples/_failures_safe/1761126717_7796bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f62f577c.c: In function ‘main’:
./samples/SAFE/__tmp_f62f577c.c:146:17: error: expected ‘;’ at end of input
  146 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_f62f577c.c:146:9: error: expected declaration or statement at end of input
  146 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_f62f577c.c:146:9: error: expected declaration or statement at end of input
